--- a/style.css
+++ b/style.css
@@ -64,3 +64,10 @@ li a:hover {
 footer{
   text-align: center;
 }
+
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
