--- a/blog/style4.css
+++ b/blog/style4.css
@@ -47,3 +47,15 @@ div {
   background-color: #f2f2f2;
   padding: 20px;
 }
+
+.liste {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  text-decoration: none;
+  color: black;
+}
